package cl.ucn.disc.pa.sinv.model;

public interface Showable {

    /**
     * Show the data object
     */

    void show();

}
